css fix scrollbar-y always on

--- a/srv/css/styles.css
+++ b/srv/css/styles.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y:scroll;
+}
+
 html,
 body {
     --color: #f1f1f1;
